tests/neg/i12482.scala
package dotty.tools.io
object ZipArchive {
  FileZipArchive // error
}